--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
 <!DOCTYPE html>
+<html lang = "en">
+    <head>
+    <meta charset="UTF-8">
+    <title>PLATES</title>
+    <!-- <link rel="stylesheet" href="/static/style.css"> -->
+</head>
+<body>
+    <h1>Plates</h1>
+    <form action="/add_recipe" method="POST">
+        <label>Title:</label><br>
+        <input type="text" name="title" required><br>
+
+        <label>Description:</label><br>
+        <input type="text" name="description" required><br>
+
+        <label>Category:</label><br>
+        <input type="text" name="category" required><br>
+
+        <label>Difficulty:</label><br>
+        <input type="text" name="difficulty" required><br>
+
+        <button type="submit">ADD RECIPE</button>
+    </form>
+</body>
+</html>
